chore: Code Improvements
- Added search movies in white list endpoints so none registered users can see movies
- Response logic was moved from controllers to the services tier
- Added a new exception for upload image service
- Implemented some code improvements suggested by SonarLint
- Disabling codeQL warning for CSRF disabled since we are using JWT